--- a/Final Project/Final Project.qmd
+++ b/Final Project/Final Project.qmd
@@ -7,6 +7,8 @@ format:
 ---
 Data Source: ([NCT00364013](https://clinicaltrials.gov/ct2/show/NCT00364013?term=NCT00364013&draw=2&rank=1)). 
 
+## Prepare Environment and Data set
+
 ```{r Setup, message=FALSE, warning=FALSE}
 library(haven)
 library(purrr)
@@ -16,101 +18,117 @@ library(knitr)
 library(survival)
 library(survminer)
 
+source("get_genotype.R")
+
 trial_path = file.path("..", "Final Project", "NCT00364013")
 trial_files = list.files(trial_path, pattern = "*_pds2019.sas7bdat")
 
 dl = map(file.path(trial_path, trial_files), ~ read_sas(.x))
 names(dl) = gsub("*_pds2019.sas7bdat", "", trial_files)
 
-adae = dl$adae #"adverse events" contains severity code 
-adsl = dl$adsl #"subject-level" contains ATRT (actual treatment)
-adrsp = dl$adrsp #"response" contains confirmed responses
+# Read in required data
+adae = dl$adae #contains adverse events
+adsl = dl$adsl #contains subject-level data
 biomark = dl$biomark #contains biomarkers
-```
 
-## Visualize Distribution of Genotypes (a.k.a. biomarkers)
-
-```{r}
-source("get_genotype.R")
-
+# Select columns relevant to analysis
 filtered_biomark <- biomark %>%
-  select(c(1:7, 16:17))  # Selecting columns relevant to analysis
+  select(c(1:7, 16:17))
 
+# Utilize our get_genotype() function on each subject ID
 filtered_biomark$Genotype <- sapply(filtered_biomark$SUBJID, get_genotype)
 
-summary_df <- as.data.frame(table(filtered_biomark$Genotype))
-colnames(summary_df) <- c("Category", "Count")
+# Create master table by joining biomarker data with treatment and death metrics
+d = left_join(filtered_biomark, 
+              adsl[, c("SUBJID", "ATRT", "DTH", "DTHDY")], 
+              by = "SUBJID")
 
-kable(summary_df)
+# Temp table to get unique adverse events
+adverse_events_temp <- adae |>
+  group_by(SUBJID, AEPT) |>
+  summarize(n = n())
+
+# Count the number of adverse events per subject
+adverse_events_per_subject <- adverse_events_temp |>
+  group_by(SUBJID) |>
+  summarize(adverse_events = n())
+
+# Join adverse events
+d <- d |>
+  left_join(adverse_events_per_subject, by = "SUBJID")
+
+# Replace NA adverse events with 0
+d$adverse_events <- if_else(is.na(d$adverse_events), 0, d$adverse_events)
 ```
 
+## Visualize count of genotypes and treatments
+
 ```{r}
-ggplot(summary_df, aes(x = Category, y = Count, fill = Category)) +
-  geom_bar(stat = "identity") +
-  labs(title = "KRAS Mutation Status", x = "Category", y = "Count") +
-  theme_minimal() +
-  theme(axis.text.x = element_text(angle = 45, hjust = 1)) +  
-  geom_text(aes(label = Count), vjust = -0.5)
+d |> group_by(Genotype) |>
+  summarize(Count = n()) |>
+  ggplot(aes(x = Genotype, y = Count, fill = Genotype)) +
+    geom_bar(stat = "identity") +
+    labs(title = "KRAS Mutation Status", x = "Genotype", y = "Count") +
+    theme_minimal() +
+    theme(axis.text.x = element_text(angle = 45, hjust = 1)) +  
+    geom_text(aes(label = Count), vjust = -0.5)
+
+d |>
+    filter(Genotype != "Unknown") |> #ignore unknown genotypes
+    group_by(ATRT) |>
+    summarize(Count = n()) |>
+    ggplot(aes(x = ATRT, y = Count, fill = ATRT)) +
+    geom_bar(stat = "identity") +
+    labs(title = "Treatments", x = "Treatment", y = "Count") +
+    theme_minimal() +
+    theme(axis.text.x = element_text(angle = 45, hjust = 1)) +  
+    geom_text(aes(label = Count), vjust = -0.5)
 ```
 
 should we include predictive/ prognostic analysis done in HW2 to show where we're picking up from?
 we know from HW2 that genotype is prognostic but not predictive (genotype impacts death outcome but this is not exacerbated by treatment). so we know that mutants are more likely to die (prognostic), but don't know how many fewer days they will live. And we know that mutants are not more likely to die when being treated (predictive), but we do not know how much longer mutant & wild-types live while on treatment. We set out to answer these questions:
 
 
-## Visualize how many deaths occured during the study and how long people lived, by genotype
+## Visualize average survival by genotype
 
 ```{r, message=FALSE}
-d = left_join(filtered_biomark, 
-              adsl[, c("SUBJID", "ATRT", "DTH", "DTHDY")], 
-              by = "SUBJID")
+source("plot_survival_days_genotype.R")
 
-d |>
-  filter(Genotype != "Unknown") %>% #ignore unknown genotypes
-  group_by(Genotype, DTH) |>
-  summarize(count = n(), avg_survival_days = sum(DTHDY)/n()) |>
-  kable()
+plot_survival_days_genotype(d)
 ```
 
 ## Analyze whether number of survival days differed by genotype
 
 ```{r}
-source("survival_days_genotype.R")
+source("test_survival_days_genotype.R")
 
-survival_days_genotype(d)
+test_survival_days_genotype(d)
 ```
 
 Patients with a mutant genotype generally have 48 to 146 fewer days to live than those with a wild-type (p<0.05).
 
 
-## Visualize how many deaths occured during the study and how long people lived, by treatment
+## Visualize average survival by genotype
 
 ```{r, message=FALSE}
-d |>
-  filter(Genotype != "Unknown") %>% #ignore unknown genotypes
-  group_by(ATRT, DTH) |>
-  summarize(count = n(), avg_survival_days = sum(DTHDY)/n()) |>
-  kable()
+source("plot_survival_days_treatment.R")
+
+plot_survival_days_treatment(d)
 ```
 
 
 ## Analyze whether number of survival days differed by treatment
 
 ```{r, message=FALSE}
-folfox_survival_days <- d |>
-  filter(ATRT == "FOLFOX alone") |>
-  select(DTHDY)
+source("test_survival_days_treatment.R")
 
-folxfox_panitumumab_survival_days <- d |>
-  filter(ATRT == "Panitumumab + FOLFOX") |>
-  select(DTHDY)
-
-t.test(folfox_survival_days, folxfox_panitumumab_survival_days, var.equal = TRUE)
+test_survival_days_treatment(d)
 ```
 
 Patients on one or both treatments do not have a different number of survival days (p>0.05).
 
 
-**Does the combination of Genotype and Treatment Arm have a significant impact on patient survival outcomes?**
+## Does the combination of Genotype and Treatment Arm have a significant impact on patient survival outcomes?
 
 ```{r}
 # Filtering out unknown genotypes since these are not informative for this analysis
@@ -148,7 +166,7 @@ Here we can see the following:
 
 - If a subject has the "Mutant" genotype, they may have an improved survival rate if they receive 'FOLFOX alone' instead of 'Panitumumab+FOLFOX'
 
-**"Does the presence of KRAS mutations significantly impact the survival outcomes of metastatic colorectal cancer patients receiving different treatment regimens, specifically Panitumumab in combination with FOLFOX and FOLFOX alone?"**
+##"Does the presence of KRAS mutations significantly impact the survival outcomes of metastatic colorectal cancer patients receiving different treatment regimens, specifically Panitumumab in combination with FOLFOX and FOLFOX alone?"
 
 The Kaplan-Meier curve assesses whether there are significant differences in survival times among different genotypic groups .
 
@@ -177,49 +195,30 @@ summary(coxph(Surv(dcombo$DTHDY, dcombo$DTH) ~ dcombo$Genotype))
 
 Patients with the "Mutant" genotype have a lower chance of survival compared to those with the "Wild-type" genotype, as indicated by the positive coefficient and the significant log-rank test.
 
-**Are there differences in the occurrence of adverse events between patients receiving Panitumumab in combination with FOLFOX and those receiving FOLFOX alone?**
-
-The following code adds the number of unique adverse events per patient and examines whether there is a difference in this number by genotype or treatment:
+## Are there differences in the occurrence of adverse events between patients receiving Panitumumab in combination with FOLFOX and those receiving FOLFOX alone?
 
 ```{r}
-adverse_events_temp <- adae |>
-  group_by(SUBJID, AEPT) |>
-  summarize(n = n())
+source("plot_adverse_events_genotype.R")
 
-adverse_events_per_subject <- adverse_events_temp |>
-  group_by(SUBJID) |>
-  summarize(adverse_events = n())
+plot_adverse_events_genotype(d)
 
-d_ae <- d |>
-  left_join(adverse_events_per_subject, by = "SUBJID")
+source("test_adverse_events_genotype.R")
 
-d_ae$adverse_events <- if_else(is.na(d_ae$adverse_events), 0, d_ae$adverse_events)
-  
-mutant_adverse_events <- d_ae |>
-  filter(Genotype == "Mutant") |>
-  select(adverse_events)
+test_adverse_events_genotype(d)
 
-wild_type_adverse_events <- d_ae |>
-  filter(Genotype == "Wild-type") |>
-  select(adverse_events)
+source("plot_adverse_events_treatment.R")
 
-t.test(mutant_adverse_events, wild_type_adverse_events, var.equal = TRUE)
+plot_adverse_events_treatment(d)
 
-folfox_adverse_events <- d_ae |>
-  filter(ATRT == "FOLFOX alone") |>
-  select(adverse_events)
+source("test_adverse_events_treatment.R")
 
-folxfox_panitumumab_adverse_events <- d_ae |>
-  filter(ATRT == "Panitumumab + FOLFOX") |>
-  select(adverse_events)
-
-t.test(folfox_adverse_events, folxfox_panitumumab_adverse_events, var.equal = TRUE)
+test_adverse_events_treatment(d)
 ```
 
 Wild-type and mutant genotypes do not have different numbers of adverse events during the trial (p>0.05). However, we did find that patients taking Folfox alone had an average of 2 fewer adverse events than patients taking both Folfox combined with Panitumumab (p<0.05).
 
 
-Do you need to keep any of the following adverse events code?
+Do you need to keep any of the following code/ analysis?
 
 ```{r}
 # Example code
@@ -274,6 +273,7 @@ ggplot(d, aes(x = DTHDY, color = Genotype)) +
 
 ```
 Are there significant differences in the survival distribution over time between different genotypes?
+(think this analysis piece is covered by the t-test, but I included the graph in the exploratory analysis)
 
 Hypothesis:
 Null Hypothesis (H0): There is no significant difference in the survival distribution over time among different genotypes.
@@ -285,6 +285,7 @@ print(surv_diff_genotype)
 ```
 
 **Does the treatment arm influence the survival distribution over time within each genotype?**
+(think this is covered with T-test)
 
 Hypothesis:
 Null Hypothesis (H0): The treatment arm does not significantly influence the survival distribution over time within each genotype.
