--- a/Final Project/Extended Abstract.Rmd
+++ b/Final Project/Extended Abstract.Rmd
@@ -20,23 +20,15 @@ knitr::opts_chunk$set(
 
 #### Introduction
 
-The Panitumumab Randomized trial In combination with chemotherapy for Metastatic colorectal cancer to determine Efficacy (PRIME) is a pivotal study in the field of oncology. Conducted by Douillard et al. in 2014, the study focused on evaluating the efficacy of panitumumab-FOLFOX4 compared to FOLFOX4 alone as first-line treatment for wild-type (WT) KRAS metastatic colorectal cancer (mCRC).
+The Panitumumab Randomized trial In combination with chemotherapy for Metastatic colorectal cancer to determine Efficacy (PRIME) conducted by Douillard et al. in 2014 is a pivotal study in oncology. This investigation focused on assessing the efficacy of panitumumab-FOLFOX4 in comparison to FOLFOX4 alone as the first-line treatment for wild-type (WT) KRAS metastatic colorectal cancer (mCRC).
 
-#### Significance of the PRIME Study
+The PRIME study yielded significant findings, demonstrating that panitumumab-FOLFOX4 led to a marked improvement in progression-free survival (PFS) compared to FOLFOX4 in patients with WT KRAS mCRC. This observed enhancement in PFS underscores the potential of panitumumab as an effective treatment option for a specific subset of mCRC patients.
 
-The PRIME study demonstrated that panitumumab-FOLFOX4 significantly improved progression-free survival (PFS) compared to FOLFOX4 in patients with WT KRAS mCRC. This improvement in PFS, along with other key findings, suggests the potential of panitumumab as an effective treatment option for a specific subset of mCRC patients.
+Against the backdrop of colorectal cancer's global health impact, the PRIME study contributes valuable insights into the effectiveness of targeted therapies. The study emphasizes the critical role of molecular profiling, such as KRAS testing, in guiding treatment decisions for better patient outcomes.
 
-#### Context within Scientific Research
+The positive benefit-risk profile observed in the PRIME study holds significant implications for healthcare practitioners. Understanding the impact of panitumumab-FOLFOX4 on both progression-free survival and overall survival in WT KRAS mCRC patients becomes crucial for informed clinical decision-making.
 
-Colorectal cancer remains a significant global health concern, and advancements in treatment strategies are crucial for improving patient outcomes. The PRIME study contributes valuable insights into the effectiveness of targeted therapies, emphasizing the importance of molecular profiling, such as KRAS testing, in treatment decision-making.
-
-#### Implications for Healthcare
-
-The positive benefit-risk profile observed in the PRIME study raises important considerations for healthcare practitioners. Understanding the impact of panitumumab-FOLFOX4 on both progression-free survival and overall survival in WT KRAS mCRC patients is vital for informed clinical decision-making.
-
-#### Research Gap Addressed
-
-The study addresses a notable research gap by providing evidence for the efficacy and safety of panitumumab-FOLFOX4 in previously untreated WT KRAS mCRC patients. This information is critical for identifying patients who would benefit the most from this treatment regimen.
+Addressing a notable research gap, the study provides evidence for the efficacy and safety of panitumumab-FOLFOX4 in previously untreated WT KRAS mCRC patients. This information is essential for identifying patients who would benefit the most from this treatment regimen.
 
 #### Motivation for Analysis
 
@@ -66,20 +58,31 @@ Given the significance of the PRIME study, our analysis aims to further explore 
 5. **Significance Level (α):** Set a predetermined significance level (e.g., α = 0.05) to determine statistical significance.
 
 **Does the combination of Genotype and Treatment Arm have a significant impact on patient survival outcomes?**
-Null Hypothesis (H0): The combination of Genotype and Treatment Arm does not significantly impact patient survival outcomes.
-Alternative Hypothesis (H1): The combination of Genotype and Treatment Arm significantly impacts patient survival outcomes.
+
+- Null Hypothesis (H0): The combination of Genotype and Treatment Arm does not significantly impact patient survival outcomes.
+
+- Alternative Hypothesis (H1): The combination of Genotype and Treatment Arm significantly impacts patient survival outcomes.
+
 
 **Are there differences in the occurrence of adverse events between patients receiving Panitumumab in combination with FOLFOX and those receiving FOLFOX alone?**
-Null Hypothesis (H0): There is no significant difference in the occurrence of adverse events between treatment arms.
-Alternative Hypothesis (H1): There is a significant difference in the occurrence of adverse events between treatment arms.
+
+- Null Hypothesis (H0): There is no significant difference in the occurrence of adverse events between treatment arms.
+
+- Alternative Hypothesis (H1): There is a significant difference in the occurrence of adverse events between treatment arms.
+
 
 **Are there significant differences in the survival distribution over time between different genotypes?**
-Null Hypothesis (H0): There is no significant difference in the survival distribution over time among different genotypes.
-Alternative Hypothesis (H1): There are significant differences in the survival distribution over time among different genotypes.
+
+- Null Hypothesis (H0): There is no significant difference in the survival distribution over time among different genotypes.
+
+- Alternative Hypothesis (H1): There are significant differences in the survival distribution over time among different genotypes.
+
 
 **Does the treatment arm influence the survival distribution over time within each genotype?**
-Null Hypothesis (H0): The treatment arm does not significantly influence the survival distribution over time within each genotype.
-Alternative Hypothesis (H1): The treatment arm significantly influences the survival distribution over time within each genotype.
+
+- Null Hypothesis (H0): The treatment arm does not significantly influence the survival distribution over time within each genotype.
+
+- Alternative Hypothesis (H1): The treatment arm significantly influences the survival distribution over time within each genotype.
 
 # Data Cleaning and Exploration
 
